# omega2-arduino-core

./: CMakeLists.txt  README.md  main.cpp  omega_toolchain  omega_toolchain.cmake  transfer.sh
ArduinoCore/: Arduino.h  Console.cpp  HardwareSerial.cpp  cbuf.cpp  linux_console.c  pins_omega.h  stdlib_noniso.cpp  stdlib_noniso.h  wiring.c
